--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-minimal
+title: BIMM 143 Introduction to Bioinformatics Spring 2018
+description: Projects conducted from an introductory Bioinformatics class at UC San Diego. 
+logo: https://bioboot.github.io/bimm143_S18/assets/img/logo.png
